# dataops-pipeline-docker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docstring_ref.txt  main.py  pyproject.toml  requirements.txt  setup.cfg
src/: pipeline.py
src/ingest/: ingest.py  ingest_main.py
src/transform/: transform.py  transform_main.py
src/utils/: logger.py
src/validate/: validate.py  validate_main.py
tests/test_ingest/: test_ingest.py
tests/test_transform/: test_transform.py
tests/test_validate/: test_validate.py
