[project]
name = "dataops-pipeline"
version = "2.0.0"
description = "A modular DataOps pipeline with ingestion, transformation, validation, and orchestration."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests",
    "pandas",
    "pandera",
    "pyarrow",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
